<resources>
    <string name="app_name">Chamados</string>
    <string name="button_inserir">Inserir</string>
    <string name="button_consultar">Consultar</string>
    <string name="title_activity_login">Login</string>

    <string-array name="type_array">
        <item>Analista de Sistemas</item>
        <item>Analista de Testes</item>
        <item>DBA</item>
        <item>Infraestrutura</item>
        <item>Programador</item>
        <item>Redes</item>
        <item>Suporte Técnico</item>
    </string-array>

    <!-- Strings related to login -->
    <string name="prompt_cpf">CPF</string>
    <string name="prompt_id">Id:</string>
    <string name="prompt_nome_usuario">Nome do Usuário:</string>
    <string name="prompt_nome_solucionador">Nome do Solucionador:</string>
    <string name="prompt_descricao">Descrição:</string>
    <string name="prompt_tipo">Tipo do Chamado:</string>
    <string name="prompt_abertura">Data da Abertura:</string>
    <string name="prompt_fechamento">Data de Fechamento:</string>
    <string name="prompt_status">Status:</string>
    <string name="prompt_senha">Senha</string>
    <string name="action_entrar">Entrar</string>
    <string name="action_alterar">Fechar Chamado</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
