<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/login_background"
    tools:context="com.projeto.sqlite.Alterar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_id"
            android:layout_weight="1.55"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.55"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_nome_usuario"
            android:layout_weight="1.55"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/nome_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.55"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_nome_solucionador"
            android:layout_weight="1.55"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/nome_solucionador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.55"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_tipo"
            android:layout_weight="1.55"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.55"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_abertura"
            android:layout_weight="1.55"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/data_inicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.55"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_fechamento"
            android:layout_weight="1.55"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/data_fim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.55"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_status"
            android:layout_weight="1.55"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/ic_user_24dp"
            android:drawablePadding="16dp"
            android:hint="@string/prompt_status"
            android:padding="10dp"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_descricao"
            android:layout_weight="1.55"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/descricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/ic_user_24dp"
            android:drawablePadding="16dp"
            android:hint="@string/prompt_descricao"
            android:padding="10dp"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray" />


        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#ffffff"
            android:onClick="updateCall"
            android:text="@string/action_alterar"
            android:textColor="@android:color/darker_gray"
            android:padding="10dp" />

    </LinearLayout>

</RelativeLayout>