<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/login_background"
    tools:context="com.projeto.sqlite.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="79dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/phone"
            android:tint="@android:color/white" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/ic_user_24dp"
            android:drawablePadding="16dp"
            android:hint="@string/prompt_cpf"
            android:padding="10dp"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/ic_lock_outline_24dp"
            android:drawablePadding="16dp"
            android:hint="@string/prompt_senha"
            android:padding="10dp"
            android:inputType="textPassword"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#ffffff"
            android:onClick="VerificaLogin"
            android:text="@string/action_entrar"
            android:textColor="@android:color/darker_gray"
            android:padding="10dp" />

    </LinearLayout>

</RelativeLayout>